# compgrafica

./: CMakeLists.txt  README.md  camera.cpp  camera.hpp  main.cpp  planet.cpp  planet.hpp  solar.cpp  solar.hpp  space.cpp  space.hpp  window.cpp  window.hpp
assets/shaders/: body.frag  body.vert  path.frag  path.vert  skydome.frag  skydome.vert
